src/objects/Invoice_Sent__c.object
<CustomObject>
    <description>List of all invoices which have been sent via email to clients</description>
    <fields>
        <fullName>Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Invoice Sent</label>
    <nameField>
        <label>Invoice Sent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices Sent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>